# prompter

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: TODO.md  USER_GUIDE.md
docs/decisions/: DECISIONS.md
docs/deployment/: AUTO_UPDATE.md
docs/design/: WIREFRAMES.md
docs/development/: AGENT_A_DATA.md  AGENT_A_IMPLEMENTATION_SUMMARY.md  AGENT_B_COMPLETION_REPORT.md  AGENT_B_IMPLEMENTATION_SUMMARY.md  AGENT_B_OS.md  AGENT_C_UI.md  ARCHITECTURE_VERIFICATION.md  HEXAGONAL_ARCHITECTURE_PROOF.md  OS_LAYER_STRUCTURE.md  QUICK_START_UI.md  UI_IMPLEMENTATION_SUMMARY.md  UI_STRUCTURE.md
docs/planning/: PLAN.md  SETTINGS_PLAN.md
docs/project/: STATUS.md
docs/reference/: API_CONTRACTS.md
e2e/: global-setup.ts  global-teardown.ts
e2e/fixtures/: index.ts  prompter-fixtures.ts
e2e/tests/: editor-launch.spec.ts  error-handling.spec.ts  keyboard-navigation.spec.ts  spotlight-workflow.spec.ts
images/snapshots/: REFERENCE.md
scripts/: build-dev.bat  build-tauri.bat  clean-and-run.bat  run-dev.bat  run-tauri.bat
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  prompts.rs
src-tauri/src/os/: mod.rs  tests.rs
src-tauri/src/os/application/: mod.rs
src-tauri/src/os/application/use_cases/: mod.rs  paste_prompt.rs  show_window.rs
src-tauri/src/os/domain/: mod.rs
src-tauri/src/os/domain/ports/: clipboard_service.rs  input_simulator.rs  mod.rs  window_manager.rs
src-tauri/src/os/infrastructure/: mod.rs  tauri_clipboard.rs  windows_focus.rs  windows_input.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/storage/application/: mod.rs
src-tauri/src/storage/application/services/: frecency_calculator.rs  mod.rs
src-tauri/src/storage/application/use_cases/: mod.rs  record_usage.rs  save_prompt.rs  search_prompts.rs
src-tauri/src/storage/domain/: mod.rs
src-tauri/src/storage/domain/entities/: mod.rs  prompt.rs
src-tauri/src/storage/domain/ports/: mod.rs  prompt_repository.rs  search_service.rs
src-tauri/src/storage/domain/value_objects/: frecency_score.rs  mod.rs  prompt_id.rs
src-tauri/src/storage/infrastructure/: mod.rs
src-tauri/src/storage/infrastructure/persistence/: file_prompt_repository.rs  mod.rs  yaml_parser.rs
src-tauri/src/storage/infrastructure/search/: fuzzy_search_service.rs  mod.rs
src/components/: index.ts
src/context/: ThemeContext.test.tsx  ThemeContext.tsx  ToastContext.test.tsx  ToastContext.tsx  index.ts
src/hooks/: useDebounce.test.ts  useEditor.ts  (+14 more)
(+48 files in other folders)
